--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -19,5 +19,4 @@ body
   width 400px
   height 600px
   min-width 350px
-  background-color $color-grey
-  border: 1px solid lightgrey
+  border: 1px solid $color-blue
