--- a/src/StylusCss/main.css
+++ b/src/StylusCss/main.css
@@ -62,6 +62,5 @@ body {
   width: 400px;
   height: 600px;
   min-width: 350px;
-  background-color: #999;
-  border: 1px solid #d3d3d3;
+  border: 1px solid #234a80;
 }
