--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -42,8 +42,12 @@ body
 
 .category_wrap
   margin 10px
+  display flex
+  flex-wrap: wrap;
 
 .category
-  margin 30px 0px
+  margin 10px 0
+  width 270px
+  height 90px
   display: flex;
   justify-content: space-evenly;
