--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -16,6 +16,8 @@
   display block
   font 25px MyFont
 
+.search-form_loader-wrap
+  width: 4%;
 
 .search-form_button-wrap
   width 25%
@@ -25,4 +27,6 @@
   border-radius: 5px
   background-color: $submit-button-color
   font 25px MyFont
-  
+
+.react-autocomplete-input
+  font-size 25px !important
