--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -17,12 +17,11 @@ body
   display flex
   margin 40px auto 0
   width 100%
-  height 900px
   justify-content space-around
+  min-height 825px
 
 .left-aside,
 .right-aside
-  height 600px
   min-width 350px
   box-shadow 7px 6px 12px -1px rgba(8, 16, 29, 1)
   border-radius 5px
@@ -36,9 +35,11 @@ body
 
 .left-aside
   width 400px
+  max-height 900px
 
 .right-aside
   width 40%
+
 
 .category_wrap
   margin 10px
