--- a/src/StylusCss/main.css
+++ b/src/StylusCss/main.css
@@ -79,8 +79,55 @@
   background-color: #7bb738;
   font: 25px MyFont;
 }
-.react-autocomplete-input {
-  font-size: 25px !important;
+body {
+  font-family: Helvetica, sans-serif;
+}
+.react-autosuggest__container {
+  position: relative;
+  width: 70%;
+}
+.react-autosuggest__input {
+  width: 240px;
+  height: 30px;
+  padding: 10px 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+}
+.react-autosuggest__input--focused {
+  outline: none;
+}
+.react-autosuggest__input--open {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.react-autosuggest__suggestions-container {
+  display: none;
+}
+.react-autosuggest__suggestions-container--open {
+  display: block;
+  position: absolute;
+  top: 36px;
+  width: 100%;
+  border: 1px solid #aaa;
+  background-color: #fff;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 2;
+}
+.react-autosuggest__suggestions-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.react-autosuggest__suggestion {
+  cursor: pointer;
+  padding: 10px 20px;
+}
+.react-autosuggest__suggestion--highlighted {
+  background-color: #ddd;
 }
 body {
   font-size: 28px;
