--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -25,7 +25,7 @@ body
 .left-aside,
 .right-aside
   min-width 350px
-  box-shadow 7px 6px 12px -1px rgba(8, 16, 29, 1)
+  box-shadow 7px 6px 12px -1px #7695C1
   border-radius 5px
   background-color: #ebebeb
   text-align center
