--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -1,14 +1,14 @@
 @import "pallete"
 
 .search-form
-  display: flex
+  display flex
   justify-content  space-between
   box-sizing border-box
   width inherit
 
 
 .search-form_group
-  width: 73%
+  width 73%
 
 .search-form_input
   width 100%
@@ -17,16 +17,44 @@
   font 25px MyFont
 
 .search-form_loader-wrap
-  width: 4%;
+  width 4%
 
 .search-form_button-wrap
   width 25%
 
 .search-form_button-wrap_button
-  width: 84%
-  border-radius: 5px
-  background-color: $submit-button-color
+  width 84%
+  border-radius 5px
+  background-color $submit-button-color
   font 25px MyFont
+
+.form-group
+  margin 0
+  padding 7px 0
 
 .form-group,.help
   text-align left
+  margin-left: 15px;
+
+.form-group .form-group_label
+  display block
+  margin-bottom 4px
+  height auto
+  overflow hidden
+  white-space nowrap
+  text-overflow ellipsis
+
+
+.form-group .form-group_control
+  background-color #fafafa
+  display inline-block
+  width 240px
+  box-sizing border-box
+  font-size 18px
+  border-radius 5px
+  border #9e9e9e 1px solid !important
+
+.form-group_field-loading
+  display inline
+  margin-left 10px
+  margin-top 22px
