--- a/src/StylusCss/main.css
+++ b/src/StylusCss/main.css
@@ -79,9 +79,36 @@
   background-color: #7bb738;
   font: 25px MyFont;
 }
+.form-group {
+  margin: 0;
+  padding: 7px 0;
+}
 .form-group,
 .help {
   text-align: left;
+  margin-left: 15px;
+}
+.form-group .form-group_label {
+  display: block;
+  margin-bottom: 4px;
+  height: auto;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.form-group .form-group_control {
+  background-color: #fafafa;
+  display: inline-block;
+  width: 240px;
+  box-sizing: border-box;
+  font-size: 18px;
+  border-radius: 5px;
+  border: #9e9e9e 1px solid !important;
+}
+.form-group_field-loading {
+  display: inline;
+  margin-left: 10px;
+  margin-top: 22px;
 }
 body {
   font-family: Helvetica, sans-serif;
@@ -152,7 +179,7 @@ body {
 .left-aside,
 .right-aside {
   min-width: 350px;
-  box-shadow: 7px 6px 12px -1px #08101d;
+  box-shadow: 7px 6px 12px -1px #7695c1;
   border-radius: 5px;
   background-color: #ebebeb;
   text-align: center;
