Fix autoload work

--- a/src/StylusCss/fonts.styl
+++ b/src/StylusCss/fonts.styl
@@ -1,6 +1,12 @@
 
 @font-face
-  font-family MyFont
+  font-family Weird
   src url("../../public/fonts/11050.ttf")
+  font-weight normal
+  font-style normal
+
+@font-face
+  font-family Montserrat
+  src url("../../public/fonts/Montserrat-Regular.ttf")
   font-weight normal
   font-style normal
