--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -1,11 +1,17 @@
 @import "pallete"
 
+.search
+  min-height 60px
+
+.search-form_hint
+  float left
+  margin-top 5px
+
 .search-form
   display flex
-  justify-content  space-between
+  justify-content space-between
   box-sizing border-box
   width inherit
-
 
 .search-form_group
   width 73%
@@ -32,7 +38,7 @@
   margin 0
   padding 7px 0
 
-.form-group,.help
+.form-group, .help
   text-align left
   margin-left: 15px;
 
@@ -43,7 +49,6 @@
   overflow hidden
   white-space nowrap
   text-overflow ellipsis
-
 
 .form-group .form-group_control
   background-color #fafafa
