--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -2,6 +2,7 @@
 
 .search
   min-height 60px
+  margin-left 5px
 
 .search-form_hint
   float left
@@ -19,6 +20,7 @@
 .search-form_input
   width 100%
   border-radius 5px
+  padding-left: 5px;
   display block
   font 25px MyFont
 
