--- a/src/StylusCss/pallete.styl
+++ b/src/StylusCss/pallete.styl
@@ -17,6 +17,8 @@ $color-green = #7bb738
 
 $color-white = aliceblue
 
+$color-blues = #2E3661
+
 $background-color = #fff
 
-$submit-button-color = $color-green
+$submit-button-color = $color-blues
