--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -26,6 +26,7 @@
 
 .search-form_loader-wrap
   width 4%
+  margin-left 8px
 
 .search-form_button-wrap
   width 25%
@@ -34,7 +35,9 @@
   width 84%
   border-radius 5px
   background-color $submit-button-color
-  font 25px MyFont
+  font 24px MyFont
+  margin-top 1px
+  color white
 
 .form-group
   margin 0
@@ -65,3 +68,7 @@
   display inline
   margin-left 10px
   margin-top 22px
+
+.form-group_help {
+  color red
+}
