--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -69,6 +69,9 @@
   margin-left 10px
   margin-top 22px
 
-.form-group_help {
+.form-group_help
   color red
-}
+
+.react-date-picker__button__input input
+  background-color  $color-aside
+  height 95%
