--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -27,7 +27,7 @@ body
   min-width 350px
   box-shadow -1px 1px 28px 5px  #b1b0bd;
   border-radius 5px
-  background-color: #f6f6f6
+  background-color: $color-aside
   text-align center
   margin 0 auto
 
