--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -5,6 +5,7 @@
 @import "forms"
 @import "autocomplite"
 @import "date-picker"
+@import "header"
 
 body
   font-size 20px
@@ -25,7 +26,7 @@ body
 .left-aside,
 .right-aside
   min-width 350px
-  box-shadow -1px 1px 28px 5px  #b1b0bd;
+  box-shadow -1px 1px 28px 5px  #b1b0bd
   border-radius 5px
   background-color: $color-aside
   text-align center
