--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -75,3 +75,21 @@
 .react-date-picker__button__input input
   background-color  $color-aside
   height 95%
+
+.email-sender
+  display flex
+  margin-left 56px
+  width 100%
+
+.email-sender_button
+  height 25px
+  margin-top 7px
+  margin-left 15px
+
+.email-sender_input
+  padding-left 3px
+
+.email-sender_success
+  margin-top: 7px;
+  margin-left: 15px;
+  color: red;
