--- a/src/StylusCss/pallete.styl
+++ b/src/StylusCss/pallete.styl
@@ -6,6 +6,7 @@ $color-orange_active = #b57219
 $color-orange_active-border =  #975f15
 
 $color-blue = #234a80
+$color-dotted = #1481b4
 
 $color-red = #fc0008
 
