--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -42,6 +42,7 @@
 .form-group
   margin 0
   padding 7px 0
+  display flex
 
 .form-group, .help
   text-align left
@@ -51,13 +52,14 @@
   display block
   margin-bottom 4px
   height auto
+  width: 250px
   overflow hidden
   white-space nowrap
   text-overflow ellipsis
 
 .form-group .form-group_control
   background-color #fafafa
-  display inline-block
+  height 26px
   width 240px
   box-sizing border-box
   font-size 18px
@@ -72,8 +74,12 @@
 .form-group_help
   color red
 
+.form-group_hint
+  width 300px
+  margin-left 15px
+
 .react-date-picker__button__input input
-  background-color  $color-aside
+  background-color $color-aside
   height 95%
 
 .email-sender
