--- a/src/StylusCss/settings.styl
+++ b/src/StylusCss/settings.styl
@@ -1,3 +1,5 @@
+@import './animate'
+
 .settings-item_transition-enter {
   opacity: 0.01;
 }
@@ -15,3 +17,10 @@
   opacity: 0.01;
   transition: opacity 500ms ease-in;
 }
+
+.settings-item_content {
+  border: 1px solid black
+}
+
+.settings-item_successMsgs
+  @extend .showDown
