--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -36,8 +36,10 @@ body
   margin 0 auto
 
 .header
+  display: flex
+  justify-content space-around
   color #ebebeb
-  text-shadow 2px 2px rgba(8, 16, 29, 1)
+
 
 .left-aside
   width 400px
