--- a/src/StylusCss/settings.styl
+++ b/src/StylusCss/settings.styl
@@ -19,8 +19,15 @@
 }
 
 .settings-item_content {
-  border: 1px solid black
+  border 1px solid lightgray
 }
-
+.settings-item {
+  text-align left
+  margin-left 25px
+  margin-top 50px
+  border-bottom 1px solid lightgray
+  line-height 50px
+}
 .settings-item_successMsgs
+  margin-left 15px
   @extend .showDown
