--- a/src/StylusCss/payments.styl
+++ b/src/StylusCss/payments.styl
@@ -1,3 +1,27 @@
 .payment-result_item
   display flex
-  justify-content space-evenly
+  justify-content scratch
+
+.payment-result_item h5
+  margin-left 15px
+
+.payment-result_item h3
+  margin-left 15px
+  font-size 22px
+
+.history-items
+  display: flex
+  justify-content space-between
+  padding 5px
+  text-align left
+
+.history-items_link
+  margin-left 25px
+  width 355px
+
+.history-items_sum
+  width 55px
+
+.history-items_status
+  width 125px
+  color: #3f3e53
