--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -59,5 +59,13 @@ body
   margin 10px 0
   width 270px
   height 90px
-  display: flex;
-  justify-content: space-evenly;
+  display flex
+  justify-content space-evenly
+
+.popover
+  min-width 200px
+  padding 7px
+  background-color #f3f3f3
+  border 1px solid darkgray
+  border-radius 5%
+  animation popup-fade-in 0.3s linear
