--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -61,3 +61,11 @@ body
   height 90px
   display: flex;
   justify-content: space-evenly;
+
+.fixed-popup
+  position fixed
+  top 0
+  left 0
+  width 100%
+  height 100%
+  background-color $color-grey-background
