Dialog Assist-pay

--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -30,7 +30,7 @@ body
 .left-aside,
 .right-aside
   min-width 350px
-  box-shadow -1px 1px 28px 5px  #b1b0bd
+  box-shadow -1px 1px 28px 5px #b1b0bd
   border-radius 5px
   background-color: $color-aside
   text-align center
@@ -41,14 +41,12 @@ body
   justify-content space-around
   color #ebebeb
 
-
 .left-aside
   width 400px
   max-height 900px
 
 .right-aside
   width 40%
-
 
 .category_wrap
   margin 10px
@@ -77,3 +75,29 @@ body
   border 1px solid darkgray
   border-radius 5%
   animation popup-fade-in 0.3s linear
+
+.error-block
+  width 90%
+  background-color #f88485
+  opacity 0.8
+  height 50px
+  border 1px solid #c9a9ac
+  text-align left
+  padding-left 15px
+  border-radius 10px
+  color #252525
+  line-height 50px
+  virtical-align: middle
+  margin-top 5%
+  margin-left 5%
+
+.teaser
+  width 90%
+  background-color #d3cfd1
+  border-radius 5px
+  margin-left 3%
+  margin-top 2%
+  margin-bottom 2%
+  text-align left
+  line-height 30px
+  padding:2%
