--- a/src/StylusCss/main.styl
+++ b/src/StylusCss/main.styl
@@ -101,3 +101,24 @@ body
   text-align left
   line-height 30px
   padding:2%
+
+.sum-block
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 3%;
+
+.sum-block input
+  width: 25px;
+  height: 25px;
+
+
+.sum-block-checkbox
+  width: 25px;
+  height: 25px;
+  align-self: center;
+
+.invoice-form-group
+  display: flex
+  flex-direction: row-reverse
+  justify-content: flex-end
+  margin-left: 3%
