--- a/src/StylusCss/payments.styl
+++ b/src/StylusCss/payments.styl
@@ -1,3 +1,11 @@
+.payment-result
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+  border-bottom: 1px solid #000;
+
+
 .payment-result_item
   display flex
   justify-content scratch
