--- a/src/StylusCss/animate.styl
+++ b/src/StylusCss/animate.styl
@@ -6,7 +6,6 @@
 @keyframes showDown
   from
     opacity 1
-
   to
     opacity 0
 
@@ -18,3 +17,16 @@
     opacity: 0.3;
   }
 }
+.-rotate
+  animation-name: rotation;
+  animation-duration: 0.3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+
+
+
+@keyframes rotation {
+  0% {transform:rotate(0deg);}
+  100% {transform:rotate(360deg);}
+}
+
