--- a/src/StylusCss/forms.styl
+++ b/src/StylusCss/forms.styl
@@ -52,19 +52,21 @@
   display block
   margin-bottom 4px
   height auto
-  width: 250px
+  min-width: 250px
+  min-height 55px
   overflow hidden
   white-space nowrap
   text-overflow ellipsis
 
 .form-group .form-group_control
-  background-color #fafafa
   height 26px
   width 240px
   box-sizing border-box
   font-size 18px
-  border-radius 5px
-  border #9e9e9e 1px solid !important
+  border-radius 3px
+  padding-left 5px
+  background-color: #fcfcfc;
+  border: solid 1px #bbb;
 
 .form-group_field-loading
   display inline
@@ -73,10 +75,17 @@
 
 .form-group_help
   color red
+  line-height: 20px;
+  font-style: italic;
+  font-size: 15px;
 
 .form-group_hint
-  width 300px
-  margin-left 15px
+  min-width: 200px;
+  margin-left: 15px;
+  line-height: 20px;
+  margin-top: 10px;
+  font-size: 15px;
+  color: dimgray;
 
 .react-date-picker__button__input input
   background-color $color-aside
